--- a/Windows-11-сборки.css
+++ b/Windows-11-сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 2415px;
+  min-height: 2497px;
 }
 
 .u-section-1 .u-text-1 {
@@ -46,34 +46,42 @@
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 46px auto 0;
+  margin: 42px auto 0;
 }
 
 .u-section-1 .u-btn-2 {
-  background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
   margin: 12px auto 0;
-}
-
-.u-section-1 .u-text-4 {
-  margin: 83px auto 0;
+  padding: 10px 90px;
 }
 
 .u-section-1 .u-btn-3 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 12px auto 0;
+  padding: 10px 53px;
+}
+
+.u-section-1 .u-text-4 {
+  margin: 87px auto 0;
+}
+
+.u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 0 auto;
   padding: 10px 32px;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 0;
   padding: 10px 30px;
 }
 
-.u-section-1 .u-btn-5 {
+.u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 28px;
@@ -82,7 +90,7 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2752px;
+    min-height: 2522px;
   }
 
   .u-section-1 .u-text-2 {
@@ -94,23 +102,41 @@
   }
 
   .u-section-1 .u-image-4 {
-    margin-top: 16px;
     margin-left: auto;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-top: 35px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    align-self: center;
+  }
+
+  .u-section-1 .u-btn-2 {
+    align-self: center;
+  }
+
+  .u-section-1 .u-btn-3 {
+    align-self: center;
   }
 
   .u-section-1 .u-text-4 {
     width: auto;
   }
+
+  .u-section-1 .u-btn-4 {
+    align-self: center;
+  }
+
+  .u-section-1 .u-btn-5 {
+    align-self: center;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2546px;
+    min-height: 1730px;
   }
 
   .u-section-1 .u-text-1 {
@@ -126,19 +152,14 @@
     width: 720px;
     height: 405px;
   }
-
-  .u-section-1 .u-image-4 {
-    margin-top: 20px;
-  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2514px;
+    min-height: 1528px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 153px;
     margin-left: 50px;
     margin-right: 50px;
   }
@@ -150,39 +171,20 @@
   .u-section-1 .u-image-1 {
     width: 540px;
     height: 304px;
-    margin-top: 349px;
   }
 
   .u-section-1 .u-image-2 {
     width: 540px;
     height: 304px;
-    margin-top: 20px;
-  }
-
-  .u-section-1 .u-image-3 {
-    margin-top: -947px;
-  }
-
-  .u-section-1 .u-image-4 {
-    margin-top: 663px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 20px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 29px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2292px;
+    min-height: 1103px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 28px;
     margin-left: 33px;
     margin-right: 33px;
   }
@@ -195,7 +197,6 @@
   .u-section-1 .u-image-1 {
     height: 191px;
     width: 340px;
-    margin-top: 226px;
     margin-right: -2px;
     margin-left: 2px;
   }
@@ -210,7 +211,6 @@
   .u-section-1 .u-image-3 {
     height: 191px;
     width: 340px;
-    margin-top: -608px;
     margin-right: -2px;
     margin-left: 2px;
   }
@@ -218,7 +218,7 @@
   .u-section-1 .u-image-4 {
     height: 191px;
     width: 340px;
-    margin-top: 437px;
+    margin-top: -191px;
     margin-right: -2px;
     margin-left: 2px;
   }
@@ -229,18 +229,12 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 28px;
     margin-right: 0;
     padding: 10px 16px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 72px;
     margin-left: 103px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-left: 61px;
   }
 
   .u-section-1 .u-btn-4 {
@@ -250,9 +244,12 @@
   .u-section-1 .u-btn-5 {
     margin-left: 61px;
   }
+
+  .u-section-1 .u-btn-6 {
+    margin-left: 61px;
+  }
 } .u-section-2 {
-  background-image: url("images/background.png");
-  background-position: 50% 50%;
+  background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
