--- a/Windows-8-0-сборки.css
+++ b/Windows-8-0-сборки.css
@@ -321,8 +321,7 @@
     margin-bottom: 31px;
   }
 } .u-section-2 {
-  background-image: url("images/background.png");
-  background-position: 50% 50%;
+  background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
@@ -343,15 +342,15 @@
   .u-section-2 .u-sheet-1 {
     min-height: 500px;
   }
+
+  .u-section-2 .u-text-1 {
+    margin-top: 60px;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
     min-height: 414px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-top: 60px;
   }
 }
 
