--- a/Windows-8-1-сборки.css
+++ b/Windows-8-1-сборки.css
@@ -4,11 +4,11 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 3516px;
+  min-height: 3537px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 60px auto 0;
+  margin: 28px auto 0;
 }
 
 .u-section-1 .u-text-2 {
@@ -76,7 +76,7 @@
 .u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 6px auto 60px;
+  margin: 6px auto 51px;
   padding: 10px 37px;
 }
 
@@ -219,7 +219,7 @@
     width: 340px;
   }
 } .u-section-2 {
-  background-image: url("images/background.png");
+  background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
@@ -227,17 +227,22 @@
 }
 
 .u-section-2 .u-text-1 {
-  width: auto;
-  margin: 60px 0;
+  margin: 0 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
+  }
 }
 
 @media (max-width: 991px) {
-   .u-section-2 {
-    background-position: 50% 50%;
-  }
-
   .u-section-2 .u-sheet-1 {
     min-height: 500px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: 60px;
   }
 }
 
