--- a/Windows-Lite-x32-Сборки.css
+++ b/Windows-Lite-x32-Сборки.css
@@ -367,7 +367,7 @@
     margin-bottom: 45px;
   }
 } .u-section-2 {
-  background-image: url("images/background.png");
+  background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
@@ -375,17 +375,22 @@
 }
 
 .u-section-2 .u-text-1 {
-  width: auto;
-  margin: 60px 0;
+  margin: 0 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
+  }
 }
 
 @media (max-width: 991px) {
-   .u-section-2 {
-    background-position: 50% 50%;
-  }
-
   .u-section-2 .u-sheet-1 {
     min-height: 500px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: 60px;
   }
 }
 
