--- a/Windows-Lite-x32-Сборки.css
+++ b/Windows-Lite-x32-Сборки.css
@@ -371,11 +371,20 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 236px;
+  min-height: 500px;
 }
 
 .u-section-2 .u-text-1 {
   margin: 0 0 60px;
+}
+
+.u-section-2 .u-btn-1 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+}
+
+.u-section-2 .u-btn-2 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
 @media (max-width: 1199px) {
@@ -385,23 +394,16 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 500px;
-  }
-
   .u-section-2 .u-text-1 {
-    margin-top: 60px;
+    margin-top: 114px;
+    margin-bottom: 0;
   }
-}
 
-@media (max-width: 767px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 375px;
+  .u-section-2 .u-btn-1 {
+    margin: 31px auto 0;
   }
-}
 
-@media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 236px;
+  .u-section-2 .u-btn-2 {
+    margin: 9px auto 49px;
   }
 }
