--- a/Windows-Lite-сборки.css
+++ b/Windows-Lite-сборки.css
@@ -198,11 +198,16 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 414px;
+  min-height: 500px;
 }
 
 .u-section-2 .u-text-1 {
   margin: 0 0 60px;
+}
+
+.u-section-2 .u-btn-1 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
 }
 
 @media (max-width: 1199px) {
@@ -212,23 +217,19 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 500px;
-  }
-
   .u-section-2 .u-text-1 {
-    margin-top: 60px;
+    margin-top: 114px;
+    margin-bottom: 0;
   }
-}
 
-@media (max-width: 767px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 414px;
+  .u-section-2 .u-btn-1 {
+    margin: 31px auto 60px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 261px;
+  .u-section-2 .u-btn-1 {
+    margin-left: -1px;
+    margin-right: -1px;
   }
 }
