--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 729px;
+  min-height: 780px;
 }
 
 .u-section-1 .u-text-1 {
@@ -71,14 +71,14 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 9px auto 0 334px;
-  padding: 10px 32px 10px 31px;
+  padding: 10px 50px 10px 49px;
 }
 
 .u-section-1 .u-btn-10 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px 338px 0 auto;
-  padding: 10px 50px 10px 49px;
+  margin: -45px 340px 0 auto;
+  padding: 10px 50px;
 }
 
 .u-section-1 .u-btn-11 {
@@ -91,13 +91,27 @@
 .u-section-1 .u-btn-12 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 60px;
+  margin: 9px auto 0;
   padding: 10px 201px;
+}
+
+.u-section-1 .u-btn-13 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 9px auto 0;
+  padding: 10px 94px 10px 93px;
+}
+
+.u-section-1 .u-btn-14 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 9px auto 60px;
+  padding: 10px 127px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 699px;
+    min-height: 781px;
   }
 
   .u-section-1 .u-text-1 {
@@ -143,7 +157,7 @@
   }
 
   .u-section-1 .u-btn-9 {
-    margin-left: 231px;
+    margin-left: 230px;
   }
 
   .u-section-1 .u-btn-10 {
@@ -151,13 +165,18 @@
   }
 
   .u-section-1 .u-btn-11 {
-    padding-right: 135px;
     padding-left: 135px;
+    padding-right: 135px;
   }
 
   .u-section-1 .u-btn-12 {
     padding-right: 208px;
     padding-left: 207px;
+  }
+
+  .u-section-1 .u-btn-14 {
+    margin-bottom: 34px;
+    margin-left: 231px;
   }
 }
 
@@ -203,7 +222,7 @@
   }
 
   .u-section-1 .u-btn-9 {
-    margin-left: 122px;
+    margin-left: 120px;
   }
 
   .u-section-1 .u-btn-10 {
@@ -212,8 +231,8 @@
 
   .u-section-1 .u-btn-11 {
     margin-left: 120px;
-    padding-right: 130px;
     padding-left: 130px;
+    padding-right: 130px;
   }
 
   .u-section-1 .u-btn-12 {
@@ -221,11 +240,15 @@
     padding-right: 203px;
     padding-left: 202px;
   }
+
+  .u-section-1 .u-btn-14 {
+    margin-left: 122px;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 803px;
+    min-height: 885px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -266,7 +289,7 @@
   }
 
   .u-section-1 .u-btn-10 {
-    margin-right: 32px;
+    margin-right: 31px;
   }
 
   .u-section-1 .u-btn-11 {
@@ -276,11 +299,15 @@
   .u-section-1 .u-btn-12 {
     margin-left: auto;
   }
+
+  .u-section-1 .u-btn-14 {
+    margin-left: 31px;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 984px;
+    min-height: 1052px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -324,25 +351,43 @@
   }
 
   .u-section-1 .u-btn-9 {
-    margin-top: 67px;
+    margin-top: 11px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-10 {
-    margin-top: -101px;
+    margin-top: 11px;
     margin-right: auto;
   }
 
   .u-section-1 .u-btn-11 {
-    margin-top: 67px;
-    padding-right: 29px;
-    padding-left: 29px;
+    margin-top: 11px;
+    margin-left: 0;
+    margin-right: 0;
+    padding-right: 66px;
+    padding-left: 64px;
   }
 
   .u-section-1 .u-btn-12 {
     margin-top: 11px;
-    padding-right: 103px;
-    padding-left: 101px;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 137px;
+    padding-right: 137px;
+  }
+
+  .u-section-1 .u-btn-13 {
+    margin-top: 11px;
+    margin-left: 0;
+    margin-right: 0;
+    padding-right: 31px;
+    padding-left: 29px;
+  }
+
+  .u-section-1 .u-btn-14 {
+    padding-right: 64px;
+    padding-left: 63px;
+    margin: 11px 0 48px;
   }
 } .u-section-2 {
   background-image: none;
