--- a/Длительность-установки-сборок.css
+++ b/Длительность-установки-сборок.css
@@ -23,11 +23,11 @@
 }
 
 .u-section-1 .u-text-4 {
-  margin: 2px 0 0;
+  margin: 0;
 }
 
 .u-section-1 .u-text-5 {
-  margin: 49px 0 0;
+  margin: 51px 0 0;
 }
 
 .u-section-1 .u-text-6 {
