--- a/Windows-11-сборки.css
+++ b/Windows-11-сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 671px;
+  min-height: 2554px;
 }
 
 .u-section-1 .u-text-1 {
@@ -53,10 +53,17 @@
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
   margin: 12px auto 0;
-  padding: 10px 90px;
+  padding: 10px 41px;
 }
 
 .u-section-1 .u-btn-3 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 12px auto 0;
+  padding: 10px 50px;
+}
+
+.u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 12px auto 0;
@@ -64,36 +71,40 @@
 }
 
 .u-section-1 .u-text-4 {
-  margin: 87px auto 0;
+  margin: 95px auto 0;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 0 auto;
   padding: 10px 32px;
 }
 
-.u-section-1 .u-btn-5 {
+.u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 0;
   padding: 10px 30px;
 }
 
-.u-section-1 .u-btn-6 {
+.u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 6px auto 28px;
+  margin: 6px auto 0;
   padding: 10px 37px;
 }
 
-.u-section-1 .u-btn-7 {
+.u-section-1 .u-btn-8 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 2587px;
+  }
+
   .u-section-1 .u-text-2 {
     width: auto;
   }
@@ -110,34 +121,18 @@
     width: auto;
   }
 
-  .u-section-1 .u-btn-1 {
-    align-self: center;
-  }
-
-  .u-section-1 .u-btn-2 {
-    align-self: center;
-  }
-
-  .u-section-1 .u-btn-3 {
-    align-self: center;
-  }
-
   .u-section-1 .u-text-4 {
     width: auto;
   }
 
-  .u-section-1 .u-btn-4 {
-    align-self: center;
-  }
-
-  .u-section-1 .u-btn-5 {
-    align-self: center;
+  .u-section-1 .u-btn-7 {
+    margin-bottom: 28px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1730px;
+    min-height: 1780px;
   }
 
   .u-section-1 .u-text-1 {
@@ -154,11 +149,27 @@
     height: 405px;
   }
 
-  .u-section-1 .u-btn-6 {
-    margin-bottom: 0;
+  .u-section-1 .u-btn-1 {
+    align-self: center;
   }
 
-  .u-section-1 .u-btn-7 {
+  .u-section-1 .u-btn-2 {
+    align-self: center;
+  }
+
+  .u-section-1 .u-btn-4 {
+    align-self: center;
+  }
+
+  .u-section-1 .u-btn-5 {
+    align-self: center;
+  }
+
+  .u-section-1 .u-btn-6 {
+    align-self: center;
+  }
+
+  .u-section-1 .u-btn-8 {
     margin: 0 auto;
     padding: 10px 90px;
   }
@@ -166,7 +177,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1096px;
+    min-height: 1578px;
   }
 
   .u-section-1 .u-text-1 {
@@ -191,7 +202,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 671px;
+    min-height: 1153px;
   }
 
   .u-section-1 .u-text-1 {
@@ -247,10 +258,6 @@
     margin-left: 103px;
   }
 
-  .u-section-1 .u-btn-4 {
-    margin-left: 61px;
-  }
-
   .u-section-1 .u-btn-5 {
     margin-left: 61px;
   }
@@ -258,12 +265,16 @@
   .u-section-1 .u-btn-6 {
     margin-left: 61px;
   }
+
+  .u-section-1 .u-btn-7 {
+    margin-left: 61px;
+  }
 } .u-section-2 {
   background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 500px;
+  min-height: 567px;
 }
 
 .u-section-2 .u-text-1 {
@@ -280,6 +291,16 @@
   background-image: none;
 }
 
+.u-section-2 .u-btn-3 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+}
+
+.u-section-2 .u-btn-4 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+}
+
 @media (max-width: 1199px) {
   .u-section-2 .u-text-1 {
     width: auto;
@@ -288,28 +309,65 @@
 
 @media (max-width: 991px) {
   .u-section-2 .u-text-1 {
-    margin-top: 114px;
+    margin-top: 76px;
     margin-bottom: 0;
   }
 
   .u-section-2 .u-btn-1 {
-    margin: 31px auto 0;
+    margin: 26px auto 0;
   }
 
   .u-section-2 .u-btn-2 {
-    margin: 9px auto 49px;
-    padding: 10px 90px;
+    margin: 12px auto 0;
+    padding: 10px 41px;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin: 12px auto 0;
+    padding: 10px 50px;
+  }
+
+  .u-section-2 .u-btn-4 {
+    margin: 12px auto 41px;
+    padding: 10px 53px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-text-1 {
+    margin-top: 71px;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-top: 31px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-btn-1 {
-    margin-left: -14px;
-    margin-right: -14px;
+    margin-left: -46px;
+    margin-right: -46px;
+    padding: 10px 7px;
   }
 
   .u-section-2 .u-btn-2 {
-    margin-left: -13px;
-    margin-right: -13px;
+    margin-left: -46px;
+    margin-right: -46px;
+    padding-right: 18px;
+    padding-left: 18px;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-left: -46px;
+    margin-right: -46px;
+    padding-left: 27px;
+    padding-right: 27px;
+  }
+
+  .u-section-2 .u-btn-4 {
+    margin-left: -46px;
+    margin-right: -46px;
+    padding-right: 86px;
+    padding-left: 85px;
   }
 }
