--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 780px;
+  min-height: 900px;
 }
 
 .u-section-1 .u-text-1 {
@@ -105,13 +105,20 @@
 .u-section-1 .u-btn-14 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 9px auto 0;
+  padding: 10px 129px;
+}
+
+.u-section-1 .u-btn-15 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 9px auto 60px;
   padding: 10px 127px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 782px;
+    min-height: 907px;
   }
 
   .u-section-1 .u-text-1 {
@@ -171,14 +178,13 @@
     padding-right: 208px;
     padding-left: 207px;
   }
-
-  .u-section-1 .u-btn-14 {
-    margin-bottom: 34px;
-    margin-left: 231px;
-  }
 }
 
 @media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 695px;
+  }
+
   .u-section-1 .u-text-1 {
     margin-left: 24px;
     margin-right: 24px;
@@ -239,14 +245,14 @@
     padding-left: 202px;
   }
 
-  .u-section-1 .u-btn-14 {
+  .u-section-1 .u-btn-15 {
     margin-left: 122px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 886px;
+    min-height: 521px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -298,14 +304,14 @@
     margin-left: auto;
   }
 
-  .u-section-1 .u-btn-14 {
+  .u-section-1 .u-btn-15 {
     margin-left: 31px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1052px;
+    min-height: 1184px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -359,9 +365,9 @@
   }
 
   .u-section-1 .u-btn-11 {
-    margin-top: 11px;
-    margin-left: -1px;
-    margin-right: -1px;
+    margin-top: 39px;
+    margin-left: 0;
+    margin-right: 0;
     padding-right: 66px;
     padding-left: 64px;
   }
@@ -376,28 +382,37 @@
 
   .u-section-1 .u-btn-13 {
     margin-top: 11px;
-    margin-left: -1px;
-    margin-right: -1px;
+    margin-left: 0;
+    margin-right: 0;
     padding-right: 31px;
     padding-left: 29px;
   }
 
   .u-section-1 .u-btn-14 {
+    margin-top: 11px;
+    margin-left: 0;
+    margin-right: 0;
+    padding-right: 66px;
+    padding-left: 65px;
+  }
+
+  .u-section-1 .u-btn-15 {
+    margin-top: 11px;
+    margin-left: 0;
+    margin-right: 0;
     padding-right: 64px;
     padding-left: 63px;
-    margin: 11px -1px 48px;
   }
 } .u-section-2 {
   background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 334px;
+  min-height: 241px;
 }
 
 .u-section-2 .u-layout-wrap-1 {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin: 1px 0 6px;
 }
 
 .u-section-2 .u-layout-cell-1 {
@@ -456,7 +471,12 @@
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 293px;
+    min-height: 200px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-2 .u-layout-cell-1 {
@@ -510,11 +530,6 @@
     min-height: 433px;
   }
 
-  .u-section-2 .u-layout-wrap-1 {
-    margin-top: 60px;
-    margin-bottom: 60px;
-  }
-
   .u-section-2 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
@@ -533,6 +548,13 @@
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
     min-height: 330px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-2 .u-layout-cell-1 {
