--- a/Windows-10-сборки.css
+++ b/Windows-10-сборки.css
@@ -145,56 +145,34 @@
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-left: 305px;
-  }
-
-  .u-section-1 .u-image-5 {
-    margin-left: 24px;
   }
 
   .u-section-1 .u-image-6 {
     margin-top: 20px;
-    margin-left: 24px;
-  }
-
-  .u-section-1 .u-image-7 {
-    margin-left: 24px;
   }
 
   .u-section-1 .u-image-8 {
     margin-top: 20px;
-    margin-left: 24px;
   }
 
   .u-section-1 .u-text-5 {
     width: auto;
-    margin-right: auto;
-    margin-left: -4px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-left: 303px;
+    margin-left: -2px;
+    margin-right: -2px;
   }
 
   .u-section-1 .u-text-6 {
     width: auto;
     margin-top: 88px;
-    margin-left: 407px;
   }
 
   .u-section-1 .u-btn-3 {
     margin-top: 63px;
-    margin-left: 366px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-left: 366px;
   }
 
   .u-section-1 .u-btn-5 {
     margin-top: -147px;
     margin-bottom: 128px;
-    margin-left: 366px;
   }
 }
 
@@ -230,45 +208,26 @@
   .u-section-1 .u-image-5 {
     width: 720px;
     height: 404px;
-    margin-left: 0;
   }
 
   .u-section-1 .u-image-6 {
     width: 720px;
     height: 404px;
-    margin-left: 0;
   }
 
   .u-section-1 .u-image-7 {
     width: 720px;
     height: 404px;
-    margin-left: 0;
   }
 
   .u-section-1 .u-image-8 {
     width: 720px;
     height: 404px;
-    margin-left: 0;
   }
 
-  .u-section-1 .u-btn-2 {
-    margin-left: 83px;
-  }
-
-  .u-section-1 .u-text-6 {
-    margin-left: 312px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-left: 146px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-left: 146px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-left: 146px;
+  .u-section-1 .u-text-5 {
+    margin-left: -4px;
+    margin-right: 0;
   }
 }
 
@@ -337,27 +296,6 @@
 
   .u-section-1 .u-text-5 {
     margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-text-6 {
-    margin-left: 234px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-left: 0;
   }
 }
 
@@ -408,7 +346,7 @@
     height: 191px;
     width: 100%;
     margin-right: auto;
-    margin-left: 0;
+    margin-left: auto;
   }
 
   .u-section-1 .u-image-6 {
@@ -435,10 +373,6 @@
   .u-section-1 .u-btn-2 {
     margin-left: -1px;
     margin-right: -1px;
-  }
-
-  .u-section-1 .u-text-6 {
-    margin-left: 147px;
   }
 } .u-section-2 {
   background-image: none;
@@ -468,16 +402,32 @@
 }
 
 @media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 501px;
+  }
+
   .u-section-2 .u-text-1 {
     margin-top: 114px;
     margin-bottom: 0;
   }
 
   .u-section-2 .u-btn-1 {
-    margin: 31px auto 0;
+    margin: 29px auto 0;
   }
 
   .u-section-2 .u-btn-2 {
-    margin: 9px auto 49px;
+    margin: 11px auto 49px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-btn-1 {
+    margin-left: -72px;
+    margin-right: -72px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-left: -72px;
+    margin-right: -72px;
   }
 }
