--- a/Windows-7-сборки.css
+++ b/Windows-7-сборки.css
@@ -59,18 +59,18 @@
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 45px auto 0 249px;
+  margin: 45px auto 0;
   padding: 10px 47px;
 }
 
 .u-section-1 .u-btn-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 610px;
-  padding: 10px 47px;
+  margin: 15px auto 0;
+  padding: 10px 58px;
 }
 
 .u-section-1 .u-text-4 {
-  margin: 120px auto 0;
+  margin: 60px auto 0;
 }
 
 .u-section-1 .u-image-7 {
@@ -159,11 +159,6 @@
 
   .u-section-1 .u-btn-1 {
     margin-top: 70px;
-    margin-left: 149px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-left: 510px;
   }
 
   .u-section-1 .u-text-4 {
@@ -412,7 +407,7 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 500px;
+  min-height: 617px;
 }
 
 .u-section-2 .u-text-1 {
@@ -420,6 +415,15 @@
 }
 
 .u-section-2 .u-btn-1 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+}
+
+.u-section-2 .u-btn-2 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+}
+
+.u-section-2 .u-btn-3 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
 }
@@ -432,25 +436,38 @@
 
 @media (max-width: 991px) {
   .u-section-2 .u-text-1 {
-    margin: 114px auto 0 -3px;
+    margin: 114px -2px 0;
   }
 
   .u-section-2 .u-btn-1 {
-    margin: 31px auto 60px;
-    padding: 10px 47px;
+    margin: 98px auto 0;
+    padding: 10px 11px;
   }
-}
 
-@media (max-width: 767px) {
-  .u-section-2 .u-text-1 {
-    margin-left: -2px;
-    margin-right: -2px;
+  .u-section-2 .u-btn-2 {
+    margin: 15px auto 0;
+    padding: 10px 22px;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin: -165px auto 60px;
+    padding: 10px 5px 10px 4px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-btn-1 {
-    margin-left: -11px;
-    margin-right: -11px;
+    margin-left: -58px;
+    margin-right: -58px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-left: -58px;
+    margin-right: -58px;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-left: -58px;
+    margin-right: -58px;
   }
 }
