--- a/Windows-Lite-x32-Сборки.css
+++ b/Windows-Lite-x32-Сборки.css
@@ -59,17 +59,18 @@
 
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 45px auto 0 623px;
+  background-image: none;
+  margin: 45px auto 0;
 }
 
 .u-section-1 .u-btn-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-  margin: -45px auto 0 270px;
+  margin: 12px auto 0;
+  padding: 10px 41px;
 }
 
 .u-section-1 .u-text-4 {
-  margin: 87px auto 0;
+  margin: 30px auto 0;
 }
 
 .u-section-1 .u-btn-3 {
@@ -124,17 +125,9 @@
     margin-right: 20px;
   }
 
-  .u-section-1 .u-btn-1 {
-    margin-left: 521px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-left: 173px;
-  }
-
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-top: 83px;
+    margin-top: 24px;
   }
 
   .u-section-1 .u-btn-3 {
@@ -148,67 +141,75 @@
   }
 
   .u-section-1 .u-text-1 {
+    margin-top: 0;
     margin-left: 210px;
   }
 
   .u-section-1 .u-text-2 {
+    margin-top: 0;
     margin-left: 387px;
   }
 
   .u-section-1 .u-image-1 {
     width: 720px;
     height: 405px;
+    margin-top: 0;
     margin-left: 290px;
   }
 
   .u-section-1 .u-image-2 {
     width: 720px;
     height: 405px;
+    margin-top: 0;
     margin-left: 290px;
   }
 
   .u-section-1 .u-image-3 {
     width: 720px;
     height: 405px;
+    margin-top: 0;
     margin-left: 290px;
   }
 
   .u-section-1 .u-image-4 {
     width: 720px;
     height: 405px;
-    margin-top: -641px;
+    margin-top: 0;
     margin-left: 290px;
   }
 
   .u-section-1 .u-image-5 {
+    margin-top: 0;
     margin-left: 290px;
   }
 
   .u-section-1 .u-image-6 {
+    margin-top: 0;
     margin-left: 290px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: -252px;
+    margin-top: 0;
     margin-left: 210px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 356px;
-    margin-left: 447px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-top: -102px;
+    margin-top: 0;
     margin-left: 402px;
   }
 
+  .u-section-1 .u-btn-2 {
+    margin-top: 0;
+    margin-left: 447px;
+  }
+
   .u-section-1 .u-text-4 {
-    margin-top: 86px;
+    margin-top: 0;
     margin-left: 504px;
   }
 
   .u-section-1 .u-btn-3 {
+    margin-bottom: 0;
     margin-left: 446px;
   }
 }
@@ -238,19 +239,16 @@
   .u-section-1 .u-image-3 {
     width: 540px;
     height: 304px;
-    margin-top: 326px;
     margin-left: 300px;
   }
 
   .u-section-1 .u-image-4 {
     width: 540px;
     height: 304px;
-    margin-top: -619px;
     margin-left: 300px;
   }
 
   .u-section-1 .u-image-5 {
-    margin-top: 326px;
     margin-left: 300px;
   }
 
@@ -262,25 +260,11 @@
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 18px;
     margin-left: 300px;
   }
 
-  .u-section-1 .u-btn-1 {
-    margin-top: 92px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-top: -108px;
-  }
-
   .u-section-1 .u-text-4 {
-    margin-top: 92px;
     margin-left: 503px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-bottom: 33px;
   }
 }
 
@@ -300,7 +284,6 @@
 
   .u-section-1 .u-image-1 {
     height: 191px;
-    margin-top: 611px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -308,7 +291,6 @@
 
   .u-section-1 .u-image-2 {
     height: 191px;
-    margin-top: 16px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -316,7 +298,6 @@
 
   .u-section-1 .u-image-3 {
     height: 191px;
-    margin-top: 16px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -324,7 +305,6 @@
 
   .u-section-1 .u-image-4 {
     height: 191px;
-    margin-top: 498px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -332,7 +312,6 @@
 
   .u-section-1 .u-image-5 {
     height: 188px;
-    margin-top: 13px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -340,31 +319,13 @@
 
   .u-section-1 .u-image-6 {
     height: 188px;
-    margin-top: 122px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: -2418px;
     margin-left: 400px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 2042px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-top: -45px;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-top: 87px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-bottom: 45px;
   }
 } .u-section-2 {
   background-image: none;
@@ -405,5 +366,18 @@
 
   .u-section-2 .u-btn-2 {
     margin: 9px auto 49px;
+    padding: 10px 38px 10px 37px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-btn-1 {
+    margin-left: -65px;
+    margin-right: -65px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-left: -65px;
+    margin-right: -65px;
   }
 }
