--- a/Информация-о-сборках.css
+++ b/Информация-о-сборках.css
@@ -15,15 +15,35 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 30px auto 0;
+  padding: 10px 81px 10px 80px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 34px 10px 33px;
+}
+
+.u-section-1 .u-btn-3 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 55px 10px 54px;
+}
+
+.u-section-1 .u-btn-4 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 11px auto 60px;
+  padding: 10px 75px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 825px;
+  }
+
   .u-section-1 .u-text-1 {
     width: 671px;
     margin-left: auto;
@@ -32,6 +52,10 @@
 }
 
 @media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 632px;
+  }
+
   .u-section-1 .u-text-1 {
     width: auto;
     margin-left: 25px;
@@ -40,6 +64,10 @@
 }
 
 @media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 474px;
+  }
+
   .u-section-1 .u-text-1 {
     margin-top: 73px;
     margin-left: 0;
@@ -48,5 +76,11 @@
 
   .u-section-1 .u-btn-1 {
     margin-top: 32px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 298px;
   }
 }
