--- a/Windows-Mini-сборки.css
+++ b/Windows-Mini-сборки.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 2844px;
+  min-height: 6420px;
 }
 
 .u-section-1 .u-text-1 {
@@ -44,7 +44,7 @@
 
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 48px auto 60px;
+  margin: 46px auto 0;
 }
 
 .u-section-1 .u-text-4 {
@@ -52,7 +52,48 @@
   margin: 0 auto;
 }
 
+.u-section-1 .u-text-5 {
+  margin: 161px auto 0;
+}
+
+.u-section-1 .u-image-5 {
+  width: 900px;
+  height: 506px;
+  margin: 28px auto 0;
+}
+
+.u-section-1 .u-image-6 {
+  width: 900px;
+  height: 506px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-7 {
+  width: 900px;
+  height: 506px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-8 {
+  width: 900px;
+  height: 506px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-text-6 {
+  margin: 28px auto 0;
+}
+
+.u-section-1 .u-btn-2 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 46px auto;
+}
+
 @media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 5612px;
+  }
+
   .u-section-1 .u-image-1 {
     width: 720px;
     height: 405px;
@@ -78,14 +119,30 @@
     margin-top: 20px;
   }
 
-  .u-section-1 .u-btn-1 {
-    margin-bottom: 0;
+  .u-section-1 .u-image-5 {
+    width: 680px;
+    height: 405px;
+  }
+
+  .u-section-1 .u-image-6 {
+    width: 680px;
+    height: 405px;
+  }
+
+  .u-section-1 .u-image-7 {
+    width: 680px;
+    height: 405px;
+  }
+
+  .u-section-1 .u-image-8 {
+    width: 680px;
+    height: 405px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2440px;
+    min-height: 4804px;
   }
 
   .u-section-1 .u-image-1 {
@@ -112,11 +169,31 @@
   .u-section-1 .u-text-3 {
     margin-top: -454px;
   }
+
+  .u-section-1 .u-image-5 {
+    width: 500px;
+    height: 304px;
+  }
+
+  .u-section-1 .u-image-6 {
+    width: 500px;
+    height: 304px;
+  }
+
+  .u-section-1 .u-image-7 {
+    width: 500px;
+    height: 304px;
+  }
+
+  .u-section-1 .u-image-8 {
+    width: 500px;
+    height: 304px;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1988px;
+    min-height: 3900px;
   }
 
   .u-section-1 .u-image-1 {
@@ -143,17 +220,46 @@
   .u-section-1 .u-text-3 {
     margin-top: -904px;
   }
+
+  .u-section-1 .u-image-5 {
+    width: 300px;
+    height: 191px;
+  }
+
+  .u-section-1 .u-image-6 {
+    width: 300px;
+    height: 191px;
+  }
+
+  .u-section-1 .u-image-7 {
+    width: 300px;
+    height: 191px;
+  }
+
+  .u-section-1 .u-image-8 {
+    width: 300px;
+    height: 191px;
+  }
 }.u-section-2 .u-sheet-1 {
   min-height: 500px;
 }
 
 .u-section-2 .u-text-1 {
-  width: auto;
-  margin: 60px 0;
+  margin: 0 0 60px;
 }
 
 .u-section-2 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+}
+
+.u-section-2 .u-btn-2 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
+  }
 }
 
 @media (max-width: 991px) {
@@ -163,7 +269,11 @@
   }
 
   .u-section-2 .u-btn-1 {
-    margin: 28px auto 60px;
+    margin: 28px auto 0;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin: 11px auto 49px;
   }
 }
 
@@ -171,5 +281,10 @@
   .u-section-2 .u-btn-1 {
     margin-left: -71px;
     margin-right: -71px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-left: -83px;
+    margin-right: -83px;
   }
 }
