--- a/Старые-версии-Windows.css
+++ b/Старые-версии-Windows.css
@@ -454,6 +454,17 @@
 }
 
 .u-section-2 .u-text-1 {
-  width: auto;
-  margin: 60px 0;
+  margin: 0 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-text-1 {
+    margin-top: 60px;
+  }
 }
